# npsat-urf

./: .gitignore  CITATION.cff  README.md  matlabPrototype.m
CPP/: CMakeLists.txt  NPSAT_URF_main.h  helper_func.h  main.cpp  my_structures.h
RUST/: Cargo.toml
RUST/src/: input_util.rs  main.rs  my_structs.rs
test_data/: npsat_urf.opt  teststrmlinfit.traj
